--- a/LabSem3/Views/Complaint/ComplaintWaiting.cshtml
+++ b/LabSem3/Views/Complaint/ComplaintWaiting.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PagedList.IPagedList<LabSem3.Models.Complaint>
 @using LabSem3.Models
 @using PagedList.Mvc;
-
+@using Microsoft.AspNet.Identity
 @{
     ViewBag.Title = "ComplaintWaiting";
     Layout = "~/Views/Shared/_LayoutLabversion002.cshtml";
@@ -29,65 +29,68 @@
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @item.Title
-            </td>
-            <td>
-                @item.Detail
-            </td>
-            <td>
-                @item.TypeComplaint.Name
-            </td>
-            <td>
-                <div class="row">
-                    @using (Html.BeginForm("AssignPeople", "Complaint", method: FormMethod.Post))
-                    {
-                        <input hidden type="text" name="comPlaintId" value=@item.Id />
-                        <select name="StaffId" class="form-control" style="width: 300px">
-                            <option value="-1">--Select--</option>
-                            @{
-                                List<Account> ListSp = null;
-                                switch (@item.TypeComplaintId)
-                                {
-                                    case 1:
-                                        ListSp = ViewBag.listTechnicalStaff;
-                                        break;
-                                    case 2:
-                                        ListSp = ViewBag.listTechnicalStaff;
-                                        break;
-                                    case 3:
-                                        ListSp = ViewBag.listTechnicalStaff;
-                                        break;
-                                    case 4:
-                                        ListSp = ViewBag.listTechnicalStaff;
-                                        break;
-                                    case 5:
-                                        ListSp = ViewBag.listInstructor;
-                                        break;
-                                    case 6:
-                                        ListSp = ViewBag.listTechnicalStaff;
-                                        break;
-                                    case 7:
-                                        ListSp = ViewBag.listInstructor;
-                                        break;
-                                    case 8:
-                                        ListSp = ViewBag.listInstructor;
-                                        break;
+<tr>
+    <td>
+        @item.Title
+    </td>
+    <td>
+        @item.Detail
+    </td>
+    <td>
+        @item.TypeComplaint.Name
+    </td>
+    @if (User.IsInRole("ADMIN"))
+    {
+        <td>
+            <div class="row">
+                @using (Html.BeginForm("AssignPeople", "Complaint", method: FormMethod.Post))
+                {
+                    <input hidden type="text" name="comPlaintId" value=@item.Id />
+                    <select name="StaffId" class="form-control" style="width: 300px">
+                        <option value="-1">--Select--</option>
+                        @{
+                            List<Account> ListSp = null;
+                            switch (@item.TypeComplaintId)
+                            {
+                                case 1:
+                                    ListSp = ViewBag.listTechnicalStaff;
+                                    break;
+                                case 2:
+                                    ListSp = ViewBag.listTechnicalStaff;
+                                    break;
+                                case 3:
+                                    ListSp = ViewBag.listTechnicalStaff;
+                                    break;
+                                case 4:
+                                    ListSp = ViewBag.listTechnicalStaff;
+                                    break;
+                                case 5:
+                                    ListSp = ViewBag.listInstructor;
+                                    break;
+                                case 6:
+                                    ListSp = ViewBag.listTechnicalStaff;
+                                    break;
+                                case 7:
+                                    ListSp = ViewBag.listInstructor;
+                                    break;
+                                case 8:
+                                    ListSp = ViewBag.listInstructor;
+                                    break;
 
-                                }
-
-                                foreach (Account vr in ListSp)
-                                {
-                                    <option value="@vr.Id">@vr.UserName</option>
-                                }
                             }
-                        </select>
-                        <button style="margin-top: 5px" type="submit" class="form-control btn btn-info">Apply</button>
-                    }
-                </div>
-            </td>
-        </tr>
+
+                            foreach (Account vr in ListSp)
+                            {
+                                <option value="@vr.Id">@vr.UserName</option>
+                            }
+                        }
+                    </select>
+                    <button style="margin-top: 5px" type="submit" class="form-control btn btn-info">Apply</button>
+                }
+            </div>
+        </td>
+    }
+</tr>
     }
 </table>
 
