--- a/LabSem3/Views/Document/Edit.cshtml
+++ b/LabSem3/Views/Document/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@model LabSem3.Models.Document
-
+@using Microsoft.AspNet.Identity
 @{
     ViewBag.Title = "Edit";
 }
@@ -10,7 +10,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Document</h4>
         <hr />
