--- a/LabSem3/Views/Equipment/Index.cshtml
+++ b/LabSem3/Views/Equipment/Index.cshtml
@@ -161,9 +161,16 @@
         @Html.DisplayFor(modelItem => item.TypeEquipment.Name)
     </td>
     <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+        @if (User.IsInRole("ADMIN"))
+        {
+            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) <span> | </span>
+        }
+        @Html.ActionLink("Details", "Details", new { id = item.Id })
+
+        @if (User.IsInRole("ADMIN"))
+        {
+    <span> | </span> @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+        }
     </td>
 </tr>
     }
