--- a/LabSem3/Views/Account/Register.cshtml
+++ b/LabSem3/Views/Account/Register.cshtml
@@ -36,7 +36,7 @@
                 <h4>MEGA LABS CENTER</h4><br />
             </div>
             
-            <h5>Create your new account</h5>
+            <h5>Register</h5>
             <hr/>
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
@@ -63,7 +63,7 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            @*<div class="form-group">
                 @Html.LabelFor(model => model.Birthday, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-12">
                     @Html.EditorFor(model => model.Birthday, new { htmlAttributes = new { @class = "form-control" } })
@@ -85,15 +85,7 @@
                     @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
                 </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Age, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-12">
-                    @Html.EditorFor(model => model.Age, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Age, "", new { @class = "text-danger" })
-                </div>
-            </div>
+            </div>*@
 
             @*<div class="form-group">
                     @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
