--- a/LabSem3/Views/Account/Create.cshtml
+++ b/LabSem3/Views/Account/Create.cshtml
@@ -56,7 +56,7 @@
         }
     </div>
 
-    <div class="form-group">
+    <div class="form-group" hidden>
         @Html.LabelFor(model => model.Role, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Role, new { htmlAttributes = new { @class = "form-control", @id = "arrayRole" } })
