--- a/LabSem3/Views/Account/Details.cshtml
+++ b/LabSem3/Views/Account/Details.cshtml
@@ -11,13 +11,12 @@
     <h4>Account</h4>
     <hr />
     <dl class="dl-horizontal">
-
         <dt>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
+            @Html.DisplayNameFor(model => model.Thumbnail)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.PhoneNumber)
+            <img height="200px" src="@Model.Thumbnail" />
         </dd>
 
         <dt>
@@ -29,11 +28,49 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.FullName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FullName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Email)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.PhoneNumber)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PhoneNumber)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Address)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Address)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Status)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Status)
+            @foreach (var item in EnumHelper.GetSelectList(typeof(LabSem3.Enum.AccountStatusEnum)))
+            {
+                if (Model.Status == Int32.Parse(item.Value))
+                {
+                    @item.Text
+                }
+            }
         </dd>
 
         <dt>
@@ -73,7 +110,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Department)
+            @Html.DisplayFor(model => model.Department.Name)
         </dd>
 
         @*<dt>
@@ -84,13 +121,14 @@
             @Html.DisplayFor(model => model.Complaints)
         </dd>*@
 
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.Schedules)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Schedules)
-        </dd>
+        </dd>*@
+
         <dt>
             @Html.DisplayNameFor(model => model.Roles)
         </dt>
@@ -102,14 +140,14 @@
         </dt>
 
         @*<dt>
-                Test Account by role
-            </dt>
-            <dt>
-                @foreach (var account in ViewBag.AccountByRole)
-                {
-                    <span>@account </span>
-                }
-            </dt>*@
+            Test Account by role
+        </dt>
+        <dt>
+            @foreach (var account in ViewBag.AccountByRole)
+            {
+                <span>@account </span>
+            }
+        </dt>*@
     </dl>
 </div>
 <p>
