--- a/LabSem3/Views/Account/Edit.cshtml
+++ b/LabSem3/Views/Account/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@model LabSem3.Models.ViewModel.AccountEditViewModel
-
+@using Microsoft.AspNet.Identity
 @{
     ViewBag.Title = "Edit";
 }
@@ -10,14 +10,14 @@
 @using (Html.BeginForm("EditPost", "Account", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>AccountViewModel</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
+<div class="form-horizontal">
+    <h4>AccountViewModel</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.Id)
+
+    <div class="form-group">
             @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
@@ -25,7 +25,57 @@
             </div>
         </div>
 
-        @*<div class="form-group">
+    <div class="form-group">
+        @Html.LabelFor(model => model.FullName, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.FullName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.FullName, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Thumbnail, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @*<img height="100px" src="@Model.Thumbnail" alt="Alternate Text" />*@
+            @Html.EditorFor(model => model.Thumbnail, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Thumbnail, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Birthday, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <input class="form-control text-box single-line" data-val="true" data-val-date="The field Birthday must be a date." data-val-required="Birthday Required" id="Birthday" name="Birthday" type="date" value="@(Model.Birthday != null ? string.Format("{0:yyyy-MM-dd}", Model.Birthday) : "")">
+            @*@Html.EditorFor(model => model.Birthday, new { htmlAttributes = new { @class = "form-control" } })*@
+            @Html.ValidationMessageFor(model => model.Birthday, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-4">
+            @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    @*<div class="form-group">
             @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
@@ -41,54 +91,50 @@
             </div>
         </div>*@
 
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                Role
-            </div>
-            @foreach (var item in ViewBag.Role)
-            {
-                <div class="col-md-10">
-                    <div>
-                        <input type="checkbox" value="@item.Name" id="@item.Name" class="roleCheck" 
-                            @foreach (var roleAccount in ViewBag.RoleAccounts)
-                            {
-                                @(roleAccount == item.Name ? "checked" : "")
-                            }
-                            >
-                        <label class="form-check-label" for="@item.Name">
-                            @item.Name
-                        </label>
-                    </div>
-                </div>
-            }
+    <div class="form-group">
+        <div class="control-label col-md-2">
+            Role
         </div>
-
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                Status
-            </div>
-            <select class="form-control col-2" style="margin-left: 10px" id="Status" name="Status">
-                @foreach (var item in EnumHelper.GetSelectList(typeof(LabSem3.Enum.AccountStatusEnum)))
-                {
-                <option value="@item.Value" @(Int32.Parse(item.Value) == Model.Status ? "selected" : "")>@item.Text</option>
-                }
-            </select> 
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Role, htmlAttributes: new { @class = "control-label col-md-2" })
+        @foreach (var item in ViewBag.Role)
+        {
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Role, new { htmlAttributes = new { @class = "form-control", @id = "arrayRole" } })
-                @Html.ValidationMessageFor(model => model.Role, "", new { @class = "text-danger" })
+                <div>
+                    <input type="checkbox" value="@item.Name" id="@item.Name" class="roleCheck"
+                           @foreach (var roleAccount in ViewBag.RoleAccounts) { @(roleAccount == item.Name ? "checked" : "") }>
+                    <label class="form-check-label" for="@item.Name">
+                        @item.Name
+                    </label>
+                </div>
             </div>
-        </div>
+        }
+    </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input style=" background-color: antiquewhite; border-color: skyblue;" type="submit" value="Update" class="btn btn-default" />
-            </div>
+    <div class="form-group" hidden>
+        @Html.LabelFor(model => model.Role, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Role, new { htmlAttributes = new { @class = "form-control", @id = "arrayRole" } })
+            @Html.ValidationMessageFor(model => model.Role, "", new { @class = "text-danger" })
         </div>
     </div>
+
+    <div class="form-group">
+        <div class="control-label col-md-2">
+            Status
+        </div>
+        <select class="form-control col-2" style="margin-left: 10px" id="Status" name="Status">
+            @foreach (var item in EnumHelper.GetSelectList(typeof(LabSem3.Enum.AccountStatusEnum)))
+            {
+                <option value="@item.Value" @(Int32.Parse(item.Value) == Model.Status ? "selected" : "")>@item.Text</option>
+            }
+        </select>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input style=" background-color: antiquewhite; border-color: skyblue;" type="submit" value="Update" class="btn btn-default" />
+        </div>
+    </div>
+</div>
 }
 
 <div>
