--- a/LabSem3/Views/Account/ChangePassword.cshtml
+++ b/LabSem3/Views/Account/ChangePassword.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "ChangePassword";
 }
 
-<h2>ChangePassword</h2>
+<h2 style="font-weight: bold;">ChangePassword</h2>
 
 
 @using (Html.BeginForm("ChangePasswordComfirm", "Account"))
