--- a/LabSem3/Views/Account/ChangeProfile.cshtml
+++ b/LabSem3/Views/Account/ChangeProfile.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "ChangeProfile";
 }
 
-<h2>ChangeProfile</h2>
+<h2 style="font-weight: bold;">ChangeProfile</h2>
 
 
 @using (Html.BeginForm("ComfirmChangeProfile", "Account"))
