--- a/LabSem3/Views/Account/Details.cshtml
+++ b/LabSem3/Views/Account/Details.cshtml
@@ -5,7 +5,7 @@
 
 }
 
-<h2>Details</h2>
+<h2 style="font-weight: bold;">Account Details</h2>
 
 <div>
     <hr />
@@ -35,7 +35,6 @@
                     </ul>
                 </div>
                 <div class="col-md-6">
-                    <strong>Information</strong><br>
                     <div class="table-responsive">
                         <table class="table table-user-information">
                             <tbody>
@@ -196,6 +195,13 @@
                                     <td class="text-primary">
 
                                         @string.Format("{0:dd/MM/yyyy hh:mm tt}", Model.DeletedAt)
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td>
+                                    </td>
+                                    <td class="text-primary">
                                     </td>
                                 </tr>
 
