--- a/LabSem3/Views/Account/Index.cshtml
+++ b/LabSem3/Views/Account/Index.cshtml
@@ -8,7 +8,7 @@
     <link href="~/Content/css_bach/cssPagination.css" rel="stylesheet" />
 }
 
-<h2>Index</h2>
+<h2 style="font-weight: bold;">Index</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
