--- a/LabSem3/Views/Complaint/Edit.cshtml
+++ b/LabSem3/Views/Complaint/Edit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutLabversion002.cshtml";
 }
 
-<h2>Update information and status about complaint</h2>
+<h2 style="font-weight: bold;">Update information and status about complaint</h2>
 
 
 @using (Html.BeginForm())
