--- a/LabSem3/Views/Department/Details.cshtml
+++ b/LabSem3/Views/Department/Details.cshtml
@@ -4,9 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details Department</h2>
+<h2 style="font-weight: bold;">Details</h2>
 
 <div>
+    <h4>Department</h4>
     </br>
     <dl class="dl-horizontal">
         <div class="panel-body inf-content">
