--- a/LabSem3/Views/Account/Profile.cshtml
+++ b/LabSem3/Views/Account/Profile.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Profile";
 }
 
-<h2>Profile</h2>
+<h2 style="font-weight: bold;">Profile</h2>
 
 @if (TempData["Success"] != null)
 {
