--- a/LabSem3/Views/Complaint/Create.cshtml
+++ b/LabSem3/Views/Complaint/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutLabversion002.cshtml";
 }
 
-<h2>Add New Complaint</h2>
+<h2 style="font-weight: bold;">Add New Complaint</h2>
 
 
 @using (Html.BeginForm())
