--- a/LabSem3/Views/Complaint/Index.cshtml
+++ b/LabSem3/Views/Complaint/Index.cshtml
@@ -9,7 +9,7 @@
 
 }
 
-<h2>List All Complaints</h2>
+<h2 style="font-weight: bold;">List All Complaints</h2>
 @if (TempData["Success"] != null)
 {
     <div class="alert alert-success" role="alert">
