--- a/LabSem3/Views/Department/Delete.cshtml
+++ b/LabSem3/Views/Department/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete Department</h2>
+<h2 style="font-weight: bold;">Delete Department</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 style="color: red;">Are you sure you want to delete this?</h3>
 <div>
     </br>
     <dl class="dl-horizontal">
