--- a/LabSem3/Views/Equipment/Delete.cshtml
+++ b/LabSem3/Views/Equipment/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete Equipment</h2>
+<h2 style="font-weight: bold;">Delete Equipment</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 style="color: red;">Are you sure you want to delete this?</h3>
 <div>
     </br>
     <dl class="dl-horizontal">
@@ -131,7 +131,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input style=" background-color: antiquewhite; border-color: skyblue;" type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
