--- a/LabSem3/Views/Schedule/Edit.cshtml
+++ b/LabSem3/Views/Schedule/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2 style="font-weight: bold;">Edit</h2>
 
 @if (TempData["Success"] != null)
 {
@@ -105,7 +105,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input style=" background-color: antiquewhite; border-color: skyblue;" type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
